<resources>
    <string name="app_name">Story App</string>

    <string name="scheme">http</string>
    <string name="host">www.viaviweb.in</string>
    <string name="pathPrefix">/envato/cc/ebook_app_new_demo/</string>

    <string name="get_scheme">book</string>
    <string name="get_host">ebook_app</string>
    <string name="get_pathPrefix">/</string>

    <string name="isRTL">false</string>

    <string name="admob_id">ca-app-pub-8606974587012644~9803934336</string>
    <string name="applovin_sdk">b6IFHJuxGZ6P8BFJw7_FlLqV8yp_bcJS6TXXsPdrRTD57BfxacTzGcwVPcseyRHW0UX7xNdPywRlSHyhZfxQlg</string>
    <string name="facebook_app_id">575116170238523</string>
    <string name="fb_login_protocol_scheme">fb575116170238523</string>

    <string name="home">Discover</string>
    <string name="latest">Latest</string>
    <string name="category">Genres</string>
    <string name="read_offline">Read Offline</string>
    <string name="author">Author</string>
    <string name="all_author">All Author</string>
    <string name="favorite">Favorite</string>
    <string name="download">Download</string>
    <string name="offline_read">Offline Read</string>
    <string name="settings">Settings</string>
    <string name="rate_app">Rate Us</string>
    <string name="share_app">Share Us</string>
    <string name="faq">FAQS</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clear">Clear</string>
    <string name="contact_us">Online Support Service</string>
    <string name="support">Support</string>
    <string name="all_comment">All Comments</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_condition">Terms &amp; Conditions</string>
    <string name="premium_plus">Premium Plus</string>

    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="downloading">Downloading</string>
    <string name="no_data_found">No Data Found</string>
    <string name="failed_try_again">Failed try again</string>
    <string name="you_have_not_login">You Have To Login</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="wrong">Something went to wrong please try again later</string>
    <string name="internet_connection">No Internet Connection.</string>
    <string name="Let_me_recommend_you_this_application">Let me recommend you this application</string>
    <string name="storage_permission">Please allow storage permission</string>

    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula sem a malesuada rhoncus.
        Pellentesque ut dolor a dui porttitor porta lacinia non libero. Nunc volutpat arcu quis quam convallis molestie.
    </string>

    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Write your email address here</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phoneNo">Phone No</string>
    <string name="remember_me">Remember Me</string>
    <string name="skip">SKIP</string>
    <string name="button_text_login">LOG IN</string>
    <string name="email_login">Login with email</string>
    <string name="google_login">Sign in with google</string>
    <string name="facebook_login">Sign in with facebook</string>
    <string name="button_text_register">REGISTER</string>
    <string name="terms_title">I have read and agree to the</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="already_have_an_account_yet">Already have an account?</string>
    <string name="forgot_password"><![CDATA[Forget password?]]></string>
    <string name="fp_des">Enter your email address below and  we\'ll send you email with password</string>
    <string name="send">Send</string>
    <string name="please_enter_name">please enter name</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_phone">Please enter phone no</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="password_not_match">Password and confirm password does not match</string>
    <string name="please_select_terms">Please select terms and condition option</string>

    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_pass">Change password</string>
    <string name="remove_image">Remove Image</string>
    <string name="gallery">Gallery</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="new_conform_password">New Conform Password</string>
    <string name="please_enter_old_password">Please enter old password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_enter_new_confirm_password">Please enter new confirm password</string>
    <string name="new_password_not_match">New password and new confirm password does not match</string>

    <string name="view_all">View all</string>
    <string name="continue_book">Continue Reading</string>
    <string name="continues">Continue</string>
    <string name="continue_des">Book which have been read most</string>
    <string name="latest_book">New Releases</string>
    <string name="latest_youVe_recently_read">Books which are newly added</string>
    <string name="popular_books">Popular Book</string>

    <string name="author_work_tag">Read All Books Of Authors</string>

    <string name="items_capital">Items</string>
    <string name="items">items</string>
    <string name="by">By</string>
    <string name="number">0</string>

    <string name="description">Description</string>
    <string name="you_have_allReady_download_book">You have already downloaded this book.</string>
    <string name="report_book">Report book</string>
    <string name="related_books">You may also like</string>
    <string name="stories_youVe_related_read_books">Stories you\'ve related read books</string>
    <string name="comments">Comments.....</string>
    <string name="leave_your_comment">Write your comment here</string>
    <string name="please_enter_comment">Please Enter Comment</string>
    <string name="delete_comment">Are you sure want to delete this comment</string>
    <string name="rating">Rating.....</string>
    <string name="rating_status">No rating selected.</string>
    <string name="thanks_for_rating_msg">How likely are you to recommend \n moving it to friend?(1-low,5-high)</string>

    <string name="delete">Remove</string>
    <string name="delete_msg">Are you sure you want to delete?</string>

    <string name="search_sub_cat">Search book by sub category</string>
    <string name="select_sub_category_type">Select sub category type</string>
    <string name="please_select_sub_category">Please select sub category</string>
    <string name="please_enter_book">Please Enter book name</string>
    <string name="search_author">Search book by author</string>
    <string name="select_author_type">Select author type</string>
    <string name="please_select_author">Please select author</string>
    <string name="search_book_name">Search book name</string>

    <string name="enable_push_notification">Push Notification</string>
    <string name="subject">Subject</string>
    <string name="your_message">Leave your feedback here.</string>
    <string name="please_enter_message">Please enter message</string>
    <string name="select_contact_type">Choose the question type</string>
    <string name="please_select_contact">Please select contact type</string>
    <string name="contact_detail">Please enter you contact details and admin will soon contact you.</string>
    <string name="them">Reading Mode</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system_default">System default</string>
    <string name="ok">OK</string>
    <string name="cancel"><![CDATA[CANCEL]]></string>
    <string name="choose_one">Choose one</string>

    <string name="update">Update</string>
    <string name="close">Close</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->

</resources>
