<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/book_bg"
    android:orientation="vertical"
    tools:context=".activity.Landingpage">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_skip_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:outlineAmbientShadowColor="@color/transparent"
        android:outlineSpotShadowColor="@color/transparent"
        android:text="@string/skip"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="@color/transparent" />

    <ImageView
        android:id="@+id/iv_welcome_back"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:src="@mipmap/ic_launcher" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="Welcome back to StoryApp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="Create a free account to access millions of free novels"
        android:textColor="@color/night_text_color" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/email_background"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="12dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_email"
                app:tint="@color/white" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_toEndOf="@+id/imageView_facebook_login"
                android:gravity="center"
                android:text="@string/email_login"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_facebook_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/com_facebook_blue"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="12dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/facebook_ic"
                app:tint="@color/white" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_toEndOf="@+id/imageView_facebook_login"
                android:gravity="center"
                android:text="@string/facebook_login"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_google_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="12dp">

            <ImageView
                android:id="@+id/imageView_facebook_login"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/google_ic" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView_facebook_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:text="@string/google_login"
                android:textColor="@color/night_text_color"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:gravity="bottom|center"
        android:orientation="horizontal">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_terms_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/checkBoxStyle" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_titleTerms_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/terms_title"
            android:textColor="@color/night_text_color"
            android:textSize="14sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_terms_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/terms_of_use"
            android:textColor="@color/textView_app_color"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>