<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_one_download_adapter"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textView_setting_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/enable_push_notification"
                    android:textColor="@color/textView_setting"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:thumbTint="@drawable/checker_thumb"
                    app:trackTint="@drawable/checker_track" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="@color/lighter_grey" />

            <LinearLayout
                android:id="@+id/con_them_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/them"
                        android:textColor="@color/textView_setting"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textView_themType_setting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="System Default"
                        android:textColor="@color/night_text_color"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:visibility="gone" />
                </LinearLayout>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_arrow_right"
                    app:civ_circle_background_color="@color/email_background" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@color/lighter_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/clear_cache"
                        android:textColor="@color/textView_setting"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textView_cache_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="0kB "
                        android:textColor="@color/textView_setting"
                        android:textSize="14sp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_clear_cache_setting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:backgroundTint="@color/white"
                        android:text="@string/clear"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:cornerRadius="10dp"
                        app:strokeColor="@color/colorPrimary"
                        app:strokeWidth="1dp" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@color/lighter_grey" />

            <LinearLayout
                android:id="@+id/con_privacy_policy_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/textView_setting"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_arrow_right"
                    app:civ_circle_background_color="@color/email_background" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="20dp"
                android:background="@color/lighter_grey" />

            <LinearLayout
                android:id="@+id/con_terms_and_condition_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/terms_and_condition"
                        android:textColor="@color/textView_setting"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_arrow_right"
                        app:civ_circle_background_color="@color/email_background" />

                </LinearLayout>


            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="30dp"
                android:backgroundTint="@color/email_background"
                android:gravity="center"
                android:paddingVertical="13dp"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:cornerRadius="15dp"
                app:strokeColor="@color/lighter_grey"
                app:strokeWidth="2dp" />

        </LinearLayout>
    </ScrollView>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_app_version_about_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="Version 1.0"
        android:textColor="@color/textView_setting"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>

